specs/001-typescript-to-zig-native/examples/invalid/prototype.ts
// expect-error E_UNSUPPORTED_PROTOTYPE
String.prototype.slugify = function () {
  return this.toLowerCase();
};
